--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 <body>
     <header>
         <h1>Salmon Cookies</h1>
-
-
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -16,13 +14,34 @@
             </ul>
         </nav>
 
+        <h3>Our locations Includes:</h3>
+        <ul>
+            <li>Seattle</li>
+            <li>Tokyo</li>
+            <li>Dubai</li>
+            <li>Paris</li>
+            <li>Lima</li>
+
+        </ul>
+     <p>We open our shops from from 6am until 7pm.</p>
     </header>
     <main>
-
+        <div>
+            <img src="img/chinook.jpg" alt="">
+            <img src="img/cutter.jpeg" alt="">
+            <img src="img/family.jpg" alt="">
+            <img src="img/fish.jpg" alt="">
+            <img src="img/frosted-cookie.jpg" alt="">
+            <img src="img/salmon.png" alt="">
+            <img src="img/shirt.jpg" alt="">
+            
+            </div>
     </main>
     <footer>
-        <script src="app.js"></script>
+        <h3>You can contact us via whatsapp:079151515</h3>
 
+        <script src="app.js"></script>
+        <h3>&copy;CopyRights2021</h3>
     </footer>
     
 </body>
