--- a/sales.html
+++ b/sales.html
@@ -17,6 +17,28 @@
 
     </header>
     <main>
+        <form id="cookieStand">
+            <fieldset>
+                <legend>New cookie stand</legend>
+                <label for="locationfield">Shop location</label>
+                <input type = "text" id="location">
+                <br>
+                <label for="minfield">Minimum customers</label>
+                <input type = "number" id="min">
+                <br>
+                <label for="maxfield">Maximum customers</label>
+                <input type = "number" id="max">
+                <br>
+                <label for="Avgfield">Avg cookies sold</label>
+                <input type = "number" id="avg">
+                <br>
+                <input type="submit" value="submit">
+
+            </fieldset>
+
+        </form>
+
+        
         <div id='locations'>
 
         </div>
