--- a/sales.html
+++ b/sales.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>sales</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/sales.css">
 </head>
 <body>
     <header>
